# anfinances

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  README.ru.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.github/actions/tg-notify/: action.yml
.github/workflows/: deploy.yml
.github/workflows/workflows/: deploy.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  pyproject.toml
backend-py/: .dockerignore  .env.example  ARCHITECTURE.md  README.md  alembic.ini  pyproject.toml
backend-py/alembic/: env.py
backend-py/alembic/versions/: 20260602_0700_a1c0ffee5eed_сид_справочника_валют.py
backend-py/app/: config.py  database.py  main.py
backend-py/app/core/: dependencies.py  exceptions.py  middleware.py  pwned.py  security.py
backend-py/app/domains/accounts/: models.py  schemas.py  service.py
backend-py/app/domains/auth/: bootstrap.py  repository.py  routes.py  schemas.py  service.py
backend-py/app/domains/budgets/: models.py  routes.py  schemas.py  service.py
backend-py/app/domains/categories/: models.py  routes.py  service.py
backend-py/app/domains/config/: schemas.py
backend-py/app/domains/currencies/: models.py  routes.py  service.py
backend-py/app/domains/currencies/providers/: er_api.py
backend-py/app/domains/export/: repository.py  routes.py  schemas.py  service.py
backend-py/app/domains/import/: repository.py  routes.py  service.py
backend-py/app/domains/import_/: schemas.py
backend-py/app/domains/recurring/: repository.py  routes.py
backend-py/app/domains/summary/: repository.py
backend-py/app/domains/transactions/: models.py  repository.py  routes.py  schemas.py  service.py
backend-py/app/domains/users/: repository.py  routes.py  service.py
backend-py/docker/: Dockerfile
backend-py/scripts/: migrate_from_sheets.py  seed.py
backend-py/tests/: conftest.py  test_accounts_service.py  test_bootstrap.py  test_budgets_service.py  test_categories_service.py  test_currencies_service.py  test_export_service.py  test_health.py  test_import_service.py  test_password_policy.py  test_provider.py  test_pwned.py  test_routes.py  test_security.py  test_summary_service.py  test_transactions_service.py  test_transfer_service.py  test_users_service.py
backend/alembic/: env.py
backend/alembic/versions/: 20260602_0626_81077d778841_начальная_схема_14_таблиц.py  20260709_1000_b15d0af01500_add_transaction_snapshots.py  20260709_1100_c16d0credits01_add_credits.py  20260709_1200_d17d0credits02_add_credit_payment_kind.py
backend/app/: config.py  database.py  main.py
backend/app/core/: datetime.py  dependencies.py  enums.py  exceptions.py  middleware.py  models.py  pagination.py  password_policy.py  pwned.py  rate_limit.py  schemas.py  security.py
backend/docker/: Dockerfile
backend/scripts/: seed.py
backend/src/: index.js
backend/src/routes/: accounts.js  budget.js  moneyflow.js  rates.js  recurring.js  reference.js  summary.js
backend/src/services/: sheets.js
backend/tests/: conftest.py  test_accounts_service.py  test_bootstrap.py  test_budgets_service.py  test_credit_expense_projection.py  test_credits_schemas.py  test_credits_service.py  test_datetime.py  test_export_service.py  test_health.py  test_import_service.py  test_recurring_service.py  test_routes.py  test_service.py  test_summary_service.py  test_transfer_service.py
caddy/: Caddyfile
docs/: cicd.md  configuration.md  deployment.md  development.md
docs/screenshots/: README.md
frontend/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.jsx  App.tsx  constants.js  index.css  main.tsx
frontend/src/api/: index.js
frontend/src/app/: Layout.tsx  (+1 more)
nginx/: nginx.conf
scripts/: init-letsencrypt.sh
(+136 files in other folders)
