[project]
name = "anfinances-backend"
version = "0.1.0"
description = "anfinances — личный финансовый трекер. Backend на FastAPI + PostgreSQL."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "anfinances" }]

dependencies = [
    # ── Web framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # ── ORM + миграции ──
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # ── Settings + валидация ──
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",  # для EmailStr в pydantic
    # ── Auth (используется с шага 3) ──
    "argon2-cffi>=23.1.0",       # Argon2id для паролей (§8.1, ADR-015)
    "pyjwt>=2.10.0",             # JWT (замена python-jose, ADR-015)
    "python-multipart>=0.0.20",  # для OAuth2PasswordRequestForm
    "zxcvbn>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.22.1",
]

[tool.uv]
package = false  # это приложение, а не библиотека — uv не пакует его в wheel

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
# Базовый набор: pycodestyle, pyflakes, isort, bugbear, simplify, pyupgrade
select = ["E", "W", "F", "I", "B", "SIM", "UP", "C4"]
ignore = [
    "B008",  # FastAPI Depends() в дефолтах — это нормально
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E402", "F401"]  # автогенерированные миграции
"__init__.py" = ["F401"]
"tests/test_pwned.py" = ["S101", "S324"]
"tests/test_password_policy.py" = ["S101"]
"tests/test_routes.py" = ["S101", "S106"]
"tests/test_bootstrap.py" = ["S101", "S105", "S106"]
"tests/test_currencies_service.py" = ["S101"]
"tests/test_currencies_provider.py" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

zxcvbn = 4.4
